Correct calaedar icon size on IE
Fixes https://github.com/redbadger/react.london/issues/163

And removes an !important. For shame Andy :P

--- a/shared/components/NextConferenceEvent/index.scss
+++ b/shared/components/NextConferenceEvent/index.scss
@@ -13,8 +13,8 @@
     text-decoration: none;
 
     display: inline-block;
-    background-size: 22px !important;
     background: url("/img/SVG/G_blue.svg") no-repeat 17px 12px $grey;
+    background-size: 22px 22px;
     font-size: 16px;
 
     &:focus,
